correction ex. 1 group